--- a/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/ManualScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Scrobbling/Scrobbler/ManualScrobbleView.xaml
@@ -21,6 +21,8 @@
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="5"/>
       <RowDefinition Height="Auto"/>
+      <RowDefinition Height="5"/>
+      <RowDefinition Height="Auto"/>
       <RowDefinition Height="*"/>
       <RowDefinition Height="Auto"/>
     </Grid.RowDefinitions>
@@ -45,11 +47,14 @@
     <TextBox Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" Text="{Binding AlbumArtist}"/>
 
     <Label Grid.Row="8" Grid.Column="0" Content="Duration (hh:mm:ss):"/>
-    <xctk:TimeSpanUpDown Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3" Value="{Binding Duration}" Minimum="0" />
+    <xctk:TimeSpanUpDown Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3" Value="{Binding Duration}" Minimum="00:00:01" />
 
     <Label Grid.Row="10" Grid.Column="0" Content="Time Played:"/>
     <scrobbling:SelectScrobbleTimeControl Grid.Row="10" Grid.Column="2" Grid.ColumnSpan="3" DataContext="{Binding ScrobbleTimeVM}"/>
 
-    <scrobbling:ScrobbleButtonControl Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="5"/>
+    <Label Grid.Row="12" Grid.Column="0" Content="Amount:"/>
+    <xctk:IntegerUpDown Grid.Row="12" Grid.Column="2" Grid.ColumnSpan="3" Minimum="1" Value="{Binding Amount}" Maximum="1000"/>
+
+    <scrobbling:ScrobbleButtonControl Grid.Row="14" Grid.Column="0" Grid.ColumnSpan="5"/>
   </Grid>
 </UserControl>
