--- a/Last.fm-Scrubbler-WPF/Helper/FileParser/ConfigureCSVParserView.xaml
+++ b/Last.fm-Scrubbler-WPF/Helper/FileParser/ConfigureCSVParserView.xaml
@@ -5,10 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="Configure CSV Parser" Height="375" Width="300" ResizeMode="NoResize" Loaded="Window_Loaded" >
+        Title="Configure CSV Parser" Height="425" Width="325" ResizeMode="NoResize" Loaded="Window_Loaded" >
 
   <Grid Margin="5">
     <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="5"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="5"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="5"/>
       <RowDefinition Height="Auto"/>
@@ -65,17 +69,32 @@
     <TextBlock Grid.Row="14" Grid.Column="0" Text="Duration Field Index:"/>
     <xctk:IntegerUpDown Grid.Row="14" Grid.Column="2" Value="{Binding DurationFieldIndex}" Minimum="0"/>
 
-    <TextBlock Grid.Row="16" Grid.Column="0" Text="Delimiters:"/>
-    <TextBox Grid.Row="16" Grid.Column="2" Text="{Binding Delimiters}"/>
+    <TextBlock Grid.Row="16" Grid.Column="0" Text="Milliseconds Played Field Index:"/>
+    <xctk:IntegerUpDown Grid.Row="16" Grid.Column="2" Value="{Binding MillisecondsPlayedFieldIndex}"/>
 
-    <CheckBox Grid.Row="18" Grid.Column="0" Grid.ColumnSpan="3" IsChecked="{Binding HasFieldsEnclosedInQuotes}" Content="Has Fields Enclosed In Quotes"/>
+    <CheckBox Grid.Row="18" Content="Filter under:" VerticalAlignment="Center" IsChecked="{Binding FilterShortPlayedSongs}"/>
+    <Grid Grid.Row="18" Grid.Column="2">
+      <Grid.ColumnDefinitions>
+        <ColumnDefinition Width="*"/>
+        <ColumnDefinition Width="3"/>
+        <ColumnDefinition Width="Auto"/>
+      </Grid.ColumnDefinitions>
 
-    <TextBlock Grid.Row="20" Grid.Column="0" Text="Encoding:"/>
-    <ComboBox Grid.Row="20" Grid.Column="2" ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncoding}" DisplayMemberPath="EncodingName"/>
+      <xctk:IntegerUpDown Grid.Column="0" Minimum="1" Value="{Binding MillisecondsPlayedThreshold}"/>
+      <TextBlock Grid.Column="2" Text="played ms"/>
+    </Grid>
 
-    <Button x:Name="LoadDefaults" Grid.Row="22" Grid.Column="0" Grid.ColumnSpan="4" Content="Load Defaults" HorizontalAlignment="Right"/>
+    <TextBlock Grid.Row="20" Grid.Column="0" Text="Delimiters:"/>
+    <TextBox Grid.Row="20" Grid.Column="2" Text="{Binding Delimiters}"/>
 
-    <StackPanel Grid.Row="24" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
+    <CheckBox Grid.Row="22" Grid.Column="0" Grid.ColumnSpan="3" IsChecked="{Binding HasFieldsEnclosedInQuotes}" Content="Has Fields Enclosed In Quotes"/>
+
+    <TextBlock Grid.Row="24" Grid.Column="0" Text="Encoding:"/>
+    <ComboBox Grid.Row="24" Grid.Column="2" ItemsSource="{Binding AvailableEncodings}" SelectedItem="{Binding SelectedEncoding}" DisplayMemberPath="EncodingName"/>
+
+    <Button x:Name="LoadDefaults" Grid.Row="26" Grid.Column="0" Grid.ColumnSpan="4" Content="Load Defaults" HorizontalAlignment="Right"/>
+
+    <StackPanel Grid.Row="28" Grid.Column="0" Grid.ColumnSpan="3" Orientation="Horizontal" HorizontalAlignment="Right">
       <Button x:Name="SaveAndClose" Content="Save &amp; Close" HorizontalAlignment="Right" Margin="0,0,5,0"/>
       <Button x:Name="Cancel" Content="Cancel" HorizontalAlignment="Right"/>
     </StackPanel>
