--- a/Last.fm-Scrubbler-WPF/ExtraFunctions/JSONSplitterView.xaml
+++ b/Last.fm-Scrubbler-WPF/ExtraFunctions/JSONSplitterView.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="Scrubbler.ExtraFunctions.CSVSplitterView"
+﻿<UserControl x:Class="Scrubbler.ExtraFunctions.JSONSplitterView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Scrubbler.ExtraFunctions"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -35,32 +36,11 @@
         <ColumnDefinition Width="Auto"/>
         <ColumnDefinition Width="5"/>
         <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="5"/>
-        <ColumnDefinition Width="Auto"/>
       </Grid.ColumnDefinitions>
 
-      <TextBlock Grid.Column="1" VerticalAlignment="Center">
-        <TextBlock.Text>
-          <MultiBinding StringFormat="{}File to split has {0} lines |">
-            <Binding Path="NumLines"/>
-          </MultiBinding>
-        </TextBlock.Text>
-        <TextBlock.Style>
-          <Style TargetType="TextBlock">
-            <Style.Triggers>
-              <DataTrigger Binding="{Binding FileToSplit}" Value="{x:Null}">
-                <Setter Property="Visibility" Value="Collapsed"/>
-              </DataTrigger>
-              <DataTrigger Binding="{Binding FileToSplit}" Value="">
-                <Setter Property="Visibility" Value="Collapsed"/>
-              </DataTrigger>
-            </Style.Triggers>
-          </Style>
-        </TextBlock.Style>
-      </TextBlock>
-      <TextBlock Grid.Column="3" VerticalAlignment="Center" Text="Entries per file:"/>
-      <xctk:IntegerUpDown Grid.Column="5" Minimum="1" Value="{Binding EntriesPerFile}" MinWidth="50"/>
-      <Button Grid.Column="7" Content="Split" Command="{Binding SplitCommand}"/>
+      <TextBlock Grid.Column="1" VerticalAlignment="Center" Text="Entries per file:"/>
+      <xctk:IntegerUpDown Grid.Column="3" Minimum="1" Value="{Binding EntriesPerFile}" MinWidth="50"/>
+      <Button Grid.Column="5" Content="Split" Command="{Binding SplitCommand}"/>
     </Grid>
   </Grid>
 </UserControl>
